# MilitantHitchhiker-SwitchbladePack

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
MilitantHitchhiker-SwitchbladePack/: __init__.py
modules/: arc_lr_scheduler.py  flux_quant.py  flux_save.py  groq_config.json  groq_node.py  militant_merge.py  model_analyser.py  model_save.py  random_prompt_generator.py  slim_save.py  text_appender.py  uni_loader.py
