[project]
name = "militanthitchhiker-switchbladepack"
description = "Militant Hitchhiker's Switchblade Pack is a collection of custom nodes for ComfyUI that provide various multi-function capabilities."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/MilitantHitchhiker/MilitantHitchhiker-SwitchbladePack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "MilitantHitchhiker-SwitchbladePack"
Icon = ""
