[project]
name = "militanthitchhiker-switchbladepack"
description = "Militant Hitchhiker's Switchblade Pack is a collection of custom nodes for ComfyUI that provide various multi-function capabilities."
version = "1.2.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/MilitantHitchhiker/MilitantHitchhiker-SwitchbladePack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "militanthitchhiker"
DisplayName = "MilitantHitchhiker-SwitchbladePack"
Icon = ""
